# benchplot

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: static.yml  test.yml
benchplot/: Cargo.toml  LICENSE-MIT  README.md
benchplot/src/: lib.rs
benchplot/src/bench/: builder.rs  mod.rs  plot.rs
benchplot/src/util/: mod.rs
examples/sorting/: Cargo.toml
examples/sorting/src/: main.rs
