[package]
authors = ["Owain Davies"]
categories = [
    "development-tools",
    "visualization",
]
description = "Utility for benchmarking functions over various input sizes and plotting the results."
edition = "2021"
keywords = [
    "benchmark",
    "performance",
    "plot",
    "complexity",
    "profiling",
]
license = "Apache-2.0 OR MIT"
name = "benchplot"
readme = "README.md"
repository = "https://github.com/OTheDev/benchplot"
version = "0.1.1"

[dependencies]
plotters = "0.3.7"
rayon = "1.10.0"
text_io = "0.1.12"
textwrap = "0.16.1"
thiserror = "2.0.3"

[dev-dependencies]
rand = "0.8.5"
tempfile = "3.14.0"
